--- a/learn-admin-model/learn-admin/pom.xml
+++ b/learn-admin-model/learn-admin/pom.xml
@@ -18,7 +18,7 @@
     <dependencies>
         <dependency>
             <groupId>com.learn</groupId>
-            <artifactId>learn-rate-limiter</artifactId>
+            <artifactId>learn-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
-            <version>3.5.2</version>
+            <version>${mybatisplus.boot.version}</version>
         </dependency>
         <!-- mybatis分页 -->
         <dependency>
